--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,7 +1,15 @@
 <h1>Display your Pirate here</h1>
-
+	<h2>Pirate Info</h2>
+	<p>Pirate Name: <%= @pirate.name%></p>
+	<p>Pirate Weight: <%= @pirate.weight%></p>
+	<p>Pirate Height: <%= @pirate.height%></p>
 
 <h2>Display your first ship here</h2>
-
+	<p>Name: <%= @ships[0][:name]%></p>
+	<p>Type: <%= @ships[0][:type]%></p>
+	<p>Booty: <%= @ships[0][:booty]%></p>
 
 <h2>Display your second ship here</h2>
+	<p>Name: <%= @ships[1][:name]%></p>
+	<p>Type: <%= @ships[1][:type]%></p>
+	<p>Booty: <%= @ships[1][:booty]%></p>
